--- a/src/main/resources/templates/Especialidad/frmMantEspecialidad.html
+++ b/src/main/resources/templates/Especialidad/frmMantEspecialidad.html
@@ -16,8 +16,8 @@
   </thead>
   <tbody>
   <tr th:each="especialidad :${listaEspecialidad}">
-    <td th:text="${especialidad.idEsp}"></td>
-    <td th:text="${especialidad.nomEsp}"></td>
+    <td th:text="${especialidad.idesp}"></td>
+    <td th:text="${especialidad.nomesp}"></td>
     <td th:text="${especialidad.costo}"></td>
 
   </tr>
