--- a/src/main/resources/templates/Especialidad/frmRegEspecialidad.html
+++ b/src/main/resources/templates/Especialidad/frmRegEspecialidad.html
@@ -11,16 +11,14 @@
     <h5 class="card-title">Registrar Especialidad</h5>
     <form th:action="@{/Especialidad/frmRegEspecialidad}" method="post" th:object="${especialidadForm}">
       <div class="mb-3">
-        <label for="IdEsp" class="form-label">Id</label>
-        <input type="text" class="form-control" id="IdEsp" name="IdEsp" placeholder="Introducior Id Especialida" th:field="*{idEsp}" />
-        <label for="nomEsp" class="form-label">Id</label>
-        <input type="text" class="form-control" id="nomEsp" name="nomEsp" placeholder="Introducior Nombre Especialidad" th:field="*{nomEsp}" />
+        <label for="idesp" class="form-label">Id</label>
+        <input type="text" class="form-control" id="idesp" name="IdEsp" placeholder="Introducior Id Especialida" th:field="*{idesp}" />
+        <label for="nomesp" class="form-label">Nombre Especialidad</label>
+        <input type="text" class="form-control" id="nomesp" name="nomEsp" placeholder="Introducior Nombre Especialidad" th:field="*{nomesp}" />
 
-        <label for="Costo" class="form-label">Id</label>
-        <input type="number" class="form-control" id="Costo" name="Costo" placeholder="Introducior Costro" th:field="*{costo}" />
-
+        <label for="costo" class="form-label">Costo</label>
+        <input type="number" class="form-control" id="Costo" name="costo" placeholder="Introducior Costro" th:field="*{costo}" />
       </div>
-
       <!-- other form fields here -->
 
       <button type="submit" class="btn btn-primary">Guardar</button>
